# VitAI_backend

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  check_usage.py  debug_api.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.claude/memory/: MEMORY.md
.cursor/rules/: fastapi.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 308b45344852_rename_api_usage_metrics_to_ai_.py  b01ecd748fd0_add_token_columns_to_api_usage_metrics.py  cd9e66b6a9ce_initial_schema_with_analyses_api_usage_.py
app/: config.py  main.py
app/api/v1/: __init__.py  ai.py  analytics.py
app/controllers/: __init__.py  analysis_controller.py  analytics_controller.py  prompt_controller.py
app/core/: exceptions.py  rate_limit.py  security.py
app/db/: __init__.py  base.py  session.py
app/db/models/: __init__.py  ai_consumption_metric.py  analysis.py  prompt_version.py
app/db/repositories/: __init__.py  ai_consumption_metric.py  analysis.py  base.py  prompt_version.py
app/middleware/: __init__.py  metrics_middleware.py
app/models/: ai.py  base.py
app/services/: image_service.py  openai_service.py  redis_service.py
app/services/prompts/: prompt_produccion_nutricional_v2 backup 15dec2025.md  prompt_produccion_nutricional_v2 backup 23122025.md  prompt_produccion_nutricional_v2 copy.md  prompt_produccion_nutricional_v2 new.md  prompt_produccion_nutricional_v2.md
app/utils/: validators.py
docs/: API_USAGE.md  CODEBASE_STRUCTURE.md  DEPLOYMENT.md  DEVELOPMENT.md
scripts/: init-db.sql
tests/: conftest.py  test_ai_endpoint.py  test_health.py
